# multi-agent-mcp

./: .gitignore  .gtrconfig  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
docs/: dashboard.md  files.md  healthcheck.md  ipc.md  memory.md  merge.md  worktree.md
reports/: wave1-b-dashboard.md  wave1-c-recovery-tmux-worktree.md  wave1-d-env-profile-cli.md  wave1-e-memory-shutdown-session.md  wave1-f-docs-templates.md  wave2-g-integration.md  wave3-h-targeted-tests.md  wave3-i-regression.md  wave3-j-acceptance.md  wave4-k-merge-conflicts.md  wave4-l-final-merge.md
src/: __init__.py  context.py  server.py
src/config/: __init__.py  role_permissions.py  settings.py  template_loader.py  templates.py  workflow_guides.py
src/managers/: __init__.py  agent_manager.py  ai_cli_manager.py  cost_manager.py  dashboard_cost.py  dashboard_manager.py  dashboard_markdown_mixin.py  dashboard_reader_mixin.py  dashboard_rendering_mixin.py  dashboard_sync_mixin.py  dashboard_tasks_mixin.py  dashboard_writer_mixin.py  gtrconfig_manager.py  healthcheck_daemon.py  healthcheck_manager.py  ipc_manager.py  memory_manager.py  metrics_manager.py  persona_manager.py  scheduler_manager.py  tmux_manager.py  tmux_shared.py  tmux_workspace_mixin.py  worktree_manager.py
src/models/: __init__.py  agent.py  dashboard.py  message.py  workspace.py
src/tools/: __init__.py  agent.py  agent_batch_tools.py  agent_helpers.py  agent_lifecycle_tools.py  agent_tools.py  ai_cli.py  command.py  cost.py  cost_capture.py  dashboard.py  dashboard_cost_tools.py  gtrconfig.py  healthcheck.py  helpers.py  helpers_git.py  helpers_managers.py  helpers_persistence.py  helpers_registry.py  ipc.py  memory.py  memory_global.py  merge.py  (+12 more)
templates/: admin.md  owner.md  worker.md
tests/: conftest.py  test_agent_batch_tools.py  test_agent_helpers.py  test_agent_manager.py  test_ai_cli_manager.py  test_cost_capture.py  test_cost_manager.py  test_dashboard_manager.py  test_gtrconfig_manager.py  test_healthcheck_daemon.py  test_healthcheck_manager.py  test_helpers.py  test_helpers_persistence.py  test_initialize_agent.py  test_ipc_manager.py  test_memory_manager.py  test_merge.py  test_metrics_manager.py  test_model_profile.py  test_models.py  test_packaging_config.py  test_persona_manager.py  test_scheduler_manager.py  test_screenshot.py  test_server.py  test_server_lifecycle.py  test_session_env.py  test_session_state.py  test_session_tools.py  test_settings_env.py  test_task_templates.py  test_terminal_executors.py  test_tmux_manager.py  test_tmux_manager_terminal_open.py  test_tmux_shared.py  test_workflow_guides.py  test_worktree_manager.py
(+35 files in other folders)
